--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
-1.В файле Assets/Scripts/TunnelGenerator.cs запилить скрипт генерации туннеля
-Ддя проверки работы, поменять в классе Assets/Scripts/MapManager
+1.Р’ С„Р°Р№Р»Рµ Assets/Scripts/TunnelGenerator.cs Р·Р°РїРёР»РёС‚СЊ СЃРєСЂРёРїС‚ РіРµРЅРµСЂР°С†РёРё С‚СѓРЅРЅРµР»СЏ
+Р”РґСЏ РїСЂРѕРІРµСЂРєРё СЂР°Р±РѕС‚С‹, РїРѕРјРµРЅСЏС‚СЊ РІ РєР»Р°СЃСЃРµ Assets/Scripts/ComponentScripts/MapManager.cs
 generator = new BasicMapGenerator()
-на 
+РЅР° 
 generator = new TunnelGenerator()
 
-2. Создать сцену главного меню с кнопками из требований
+2. РЎРѕР·РґР°С‚СЊ СЃС†РµРЅСѓ РіР»Р°РІРЅРѕРіРѕ РјРµРЅСЋ СЃ РєРЅРѕРїРєР°РјРё РёР· С‚СЂРµР±РѕРІР°РЅРёР№
 
-3. Создать Pause Menu на игровой сцене(GameScene)
+3. РЎРѕР·РґР°С‚СЊ Pause Menu РЅР° РёРіСЂРѕРІРѕР№ СЃС†РµРЅРµ(GameScene)
