--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,5 @@
-1.В файле Assets/Scripts/TunnelGenerator.cs запилить скрипт генерации туннеля
-Ддя проверки работы, поменять в классе Assets/Scripts/ComponentScripts/MapManager.cs
-generator = new BasicMapGenerator()
-на 
-generator = new TunnelGenerator()
-
-2. Создать сцену главного меню с кнопками из требований
-
-3. Создать Pause Menu на игровой сцене(GameScene)
+1.Исправить проблему с вызовом меню в игре(при столкновении коллайдеров игрока и любых других)
+2. Добавить предметы в игру
+3. Исправить застревание персонажа в коллайдерах
+4. Изменить генерацию туннеля, добавить ветвистость главному пути
+5. Отбалансировать игровой процесс
