--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-1.Исправить проблему с вызовом меню в игре(при столкновении коллайдеров игрока и любых других)
-2. Добавить предметы в игру
-3. Исправить застревание персонажа в коллайдерах
-4. Изменить генерацию туннеля, добавить ветвистость главному пути
-5. Отбалансировать игровой процесс
+﻿1. Предметы
+2. Джойстик
+3. Адаптация UI
+4. Спрайты от Лены
+5. Балансировка игры
